@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false



skinparam classAttributeIconSize 0

hide circle
hide methods


class SystemUser {
    name
    email
    password
    phone

}
class VFM {

}

class VehicleCheckup {
    currentKms
    date

}

class Vehicle {

        brand
        model
        vehicleID
        type
        tare
        grossWeight
        currentKm
        registerDate
        acquisitionDate
        checkupFrequency
}


VFM "1" -- "*" Vehicle : registers >
Vehicle "1   " -- "0..*                        " VehicleCheckup : registers >
VFM "           1 " -- "0..*   " VehicleCheckup : requests >
SystemUser --|> VFM
@enduml